--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,12 @@
   "plugins": ["react", "prettier", "import"],
   "rules": {
     "indent": ["error", 2],
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "double"],
     "semi": 0,
